[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/ui/lenioboy_overlay.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/leni.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/parallax_background.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/spawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/game.gd" type="Script" id=5]
[ext_resource path="res://scenes/ui/hearts_container.tscn" type="PackedScene" id=6]
[ext_resource path="res://resources/font_data/kenney_pixel.tres" type="DynamicFont" id=7]
[ext_resource path="res://scenes/distractor_spawner.tscn" type="PackedScene" id=8]
[ext_resource path="res://resources/font_data/Pixel_theme.tres" type="Theme" id=9]
[ext_resource path="res://assets/fonts/kenney_pixel_square.ttf" type="DynamicFontData" id=10]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 2

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.5, 9 )

[sub_resource type="DynamicFont" id=3]
outline_size = 2
font_data = ExtResource( 10 )

[node name="Game" type="Node2D"]
script = ExtResource( 5 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 3 )]
scroll_ignore_camera_zoom = true

[node name="Leni" parent="." instance=ExtResource( 2 )]
position = Vector2( 250, 175 )

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 251, 185 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
material = SubResource( 1 )
position = Vector2( 6, -1 )
shape = SubResource( 2 )

[node name="RefPosition" type="Position2D" parent="."]
position = Vector2( 241, 175 )
__meta__ = {
"_edit_group_": true
}

[node name="Spawner" parent="." instance=ExtResource( 4 )]
position = Vector2( 1, 175 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Container" type="Control" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 25.0
margin_right = -40.0
margin_bottom = -35.0
__meta__ = {
"_edit_lock_": true
}

[node name="HBoxHUD" type="HBoxContainer" parent="HUD/Container"]
anchor_right = 1.0
margin_bottom = 19.0
size_flags_horizontal = 3
alignment = 1

[node name="ScoreLabel" type="Label" parent="HUD/Container/HBoxHUD"]
margin_right = 119.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.81
theme = ExtResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.211765, 0.211765, 0.211765, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = ExtResource( 7 )
text = "SCORE:"
uppercase = true

[node name="HBoxContainer" parent="HUD/Container/HBoxHUD" instance=ExtResource( 6 )]
anchor_right = 0.0
margin_left = 123.0
margin_right = 270.0
size_flags_horizontal = 11
alignment = 0

[node name="LevelStartLabel" type="Label" parent="HUD/Container"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -7.0
margin_bottom = 7.0
rect_pivot_offset = Vector2( 135, 12 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "GAME START"
align = 1
valign = 1
uppercase = true

[node name="LBOverlay" parent="." instance=ExtResource( 1 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="LBOverlay"]

[node name="DistractorSpawner" parent="." instance=ExtResource( 8 )]
position = Vector2( -16, 0 )

[editable path="Spawner"]
